2004-11-03  Richard van den Berg  <richard@vdberg.org>
	* Applied patch 1058973: Please don't add -I$(prefix)/include
	* Fixed bug 836253: Manual is wrong about --check command
	* Applied fix in config parser to avoid 10000 line limit

2004-11-02  Richard van den Berg  <richard@vdberg.org>
	* Fixed various documentation bugs filed as sf.net

2004-10-29  Richard van den Berg  <richard@vdberg.org>
	* Use syslog() for systems that do not have vsyslog()
	* Fixed file system traversing bug for systems without readdir_r
	* Fixed bug 836257: Line numbers in verbose output off by one

2004-10-28  Richard van den Berg  <richard@vdberg.org>
	* Removed config.h.in
	* Added ISO C99 compliant snprintf for systems that do not have it

2004-10-26  Richard van den Berg  <richard@vdberg.org>
	* Added check for ISO C99 compliant vsnprintf to configure.in

2004-10-23  Richard van den Berg  <richard@vdberg.org>
	* Applied PSQL patch from Marc Giger <gigerstyle@gmx.ch>
	* Set version to "Post 0.10"
	* Removed aide.1 and aide.1.ru since they are created by configure
	* Moved #endif for WITH_MHASH in commandconf.c thanks to berkeley@octagon.com.au

2003-12-08  Richard van den Berg  <richard@vdberg.org>
	* Applied patch 853842 "sshaide - contributed script"
	* Applied patch 855639 "Updated README file"

2003-12-02  Richard van den Berg  <richard@vdberg.org>
	* Fixed bug 851671 Aide-0.10 --config-check dumps core

2003-11-28  Richard van den Berg  <richard@vdberg.org>
	* Released aide version 0.10
	* Applied patch 849857 "cosmetic report fix" thanks to John Kristoff

2003-11-25  Mike Markley  <mike@markley.org>
	* Applied patch from bug 848664 "crash in db_input_wrapper (gzip)" thanks to Matt Kettler

2003-11-04  Richard van den Berg  <richard@vdberg.org>

	* Fixed typo in compare_db.c, closes bug 836255 thanks to Michael Schwendt
	* Applied patch 801860, fixes bug 801857 "=/$ gives segfault" thanks to Michael Schwendt